--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/deploy/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/deploy/List.razor
@@ -12,7 +12,15 @@
 <div class="layui-card">
     <div class="layui-card-header" id="anchor-play-header">
         模板发布
-        <select style="display:inline;" @onchange="ClusterChange">
+        <select style="display:inline;width: 200px;" @onchange="GroupChange">
+            <option value="0">全部</option>
+            @foreach (var clusterVO in _lstGroup)
+            {
+                <option value="@clusterVO.Id">@clusterVO.Name</option>
+            }
+        </select>
+        
+        <select style="display:inline;width: 200px;" @onchange="ClusterChange">
             @foreach (var clusterVO in _lstCluster)
             {
                 <option value="@clusterVO.Id">@clusterVO.Name - @clusterVO.RuntimeEnvType</option>
@@ -45,22 +53,22 @@
                                 </div>
                             </th>
                             <th data-field="Type">
-                                <div class="layui-table-cell laytable-cell-14-0-4">
+                                <div class="layui-table-cell laytable-cell-14-0-2">
                                     <span>Service模板</span>
                                 </div>
                             </th>
                             <th data-field="Type">
-                                <div class="layui-table-cell laytable-cell-14-0-3">
+                                <div class="layui-table-cell laytable-cell-14-0-2">
                                     <span>Ingress模板</span>
                                 </div>
                             </th>
                             <th data-field="Type">
-                                <div class="layui-table-cell laytable-cell-14-0-5">
+                                <div class="layui-table-cell laytable-cell-14-0-2">
                                     <span>Config模板</span>
                                 </div>
                             </th>
                             <th data-field="Type">
-                                <div class="layui-table-cell laytable-cell-14-0-6">
+                                <div class="layui-table-cell laytable-cell-14-0-3">
                                     <span>操作</span>
                                 </div>
                             </th>
@@ -80,7 +88,7 @@
                                 </td>
                                 <td data-field="Title">
                                     <div class="layui-table-cell laytable-cell-14-0-1">
-                                        <a href="/k8s/deploy/update/@info.Id">@info.Name</a>
+                                        @info.Name
                                     </div>
                                 </td>
                                 <td data-field="Title">
@@ -95,7 +103,7 @@
                                     </div>
                                 </td>
                                 <td data-field="Title">
-                                    <div class="layui-table-cell laytable-cell-14-0-4">
+                                    <div class="layui-table-cell laytable-cell-14-0-2">
                                         <select @bind="info.K8STplService" style="display:block;">
                                             <option value="0">不需要</option>
                                             @foreach (var yamlTplVO in _lstTpl.FindAll(O => O.K8SKindType == EumK8SKind.Service))
@@ -106,7 +114,7 @@
                                     </div>
                                 </td>
                                 <td data-field="Title">
-                                    <div class="layui-table-cell laytable-cell-14-0-3">
+                                    <div class="layui-table-cell laytable-cell-14-0-2">
                                         <select @bind="info.K8STplIngress" style="display:block;">
                                             <option value="0">不需要</option>
                                             @foreach (var yamlTplVO in _lstTpl.FindAll(O => O.K8SKindType == EumK8SKind.Ingress))
@@ -117,7 +125,7 @@
                                     </div>
                                 </td>
                                 <td data-field="Title">
-                                    <div class="layui-table-cell laytable-cell-14-0-5">
+                                    <div class="layui-table-cell laytable-cell-14-0-2">
                                         <select @bind="info.K8STplConfig" style="display:block;">
                                             <option value="0">不需要</option>
                                             @foreach (var yamlTplVO in _lstTpl.FindAll(O => O.K8SKindType == EumK8SKind.Config))
@@ -128,9 +136,9 @@
                                     </div>
                                 </td>
                                 <td data-field="Title">
-                                    <div class="layui-table-cell laytable-cell-14-0-6">
-                                        <button class="layui-btn" @onclick="() => Save(info.Id)">保存</button>
-                                        <button class="layui-btn layui-btn-danger" @onclick="() => DeployAsync(info.Id)">发布</button>
+                                    <div class="layui-table-cell laytable-cell-14-0-3">
+                                        <button class="layui-btn layui-btn-sm" @onclick="() => Save(info.Id)">保存</button>
+                                        <button class="layui-btn layui-btn-sm layui-btn-danger" @onclick="() => DeployAsync(info.Id)">发布</button>
                                     </div>
                                 </td>
                             </tr>
@@ -147,24 +155,25 @@
     .laytable-cell-14-0-0{ width: 80px; }
     .laytable-cell-14-0-1{ width: 150px; }
     .laytable-cell-14-0-2{ width: 180px; }
-    .laytable-cell-14-0-3{ width: 180px; }
-    .laytable-cell-14-0-4{ width: 180px; }
-    .laytable-cell-14-0-5{ width: 180px; }
-    .laytable-cell-14-0-6{ width: 200px; }
+    .laytable-cell-14-0-3{ width: 150px; }
+    select { width: 150px; }
 </style>
 
 @code{
 
     private int _totalCount;
     private int _pageSize = 999;
+    private int _groupId;
 
     private int _clusterId;
+    private List<ProjectGroupVO> _lstGroup = new();
     private List<ProjectVO> _lst = new();
     private List<YamlTplVO> _lstTpl = new();
     private List<ClusterVO> _lstCluster = new();
 
     protected override async Task OnInitializedAsync()
     {
+        _lstGroup = await _iocManager.Resolve<IProjectGroupService>().ToListAsync();
         // 模板
         _lstTpl = await _iocManager.Resolve<IYamlTplService>().ToListAsync();
         _lstTpl = _lstTpl.OrderByDescending(o => o.Id).ToList();
@@ -182,6 +191,12 @@
         var projectVO = _lst.Find(o => o.Id == id);
         await _iocManager.Resolve<IProjectService>().UpdateAsync(id, projectVO);
         await js.InvokeVoidAsync("layer.alert", "保存成功", new {icon = 1});
+    }
+
+    private async Task GroupChange(ChangeEventArgs args)
+    {
+        _groupId = args.Value.ConvertType(0);
+        await GetList();
     }
 
     private async Task DeployAsync()
@@ -251,7 +266,13 @@
     {
         // 重新读取所有项目列表
         _lst = await _iocManager.Resolve<IProjectService>().ToListAsync();
-
+    
+        // 如果项目组不包含当前选中的组，则移除项目
+        if (_groupId > 0)
+        {
+            _lst.RemoveAll(o => o.GroupId != _groupId);
+        }
+        
         // 遍历项目组ID
         var projectGroupIds = _lst.Select(o => o.GroupId).ToList();
         for (var i = 0; i < projectGroupIds.Count; i++)
