--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/builder/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/builder/List.razor
@@ -306,7 +306,7 @@
         var load = await js.InvokeAsync<int>("layer.load", 0, "{shade: false}");
         try
         {
-            await _iocManager.Resolve<IBuildService>().Add(project.Id);
+            await _iocManager.Resolve<IBuildService>().Add(project.Id, _clusterId);
             await js.InvokeVoidAsync("layer.alert", "已加入到队列", new {icon = 1, title = "执行结果"});
             
         }
